<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Android Training</string>

  <!-- first app: string resources -->
  <string name="first_name">First App</string>
  <string name="button_send">Send</string>
  <string name="edit_message">Enter a message</string>
  <string name="title_activity_display_message">My Message</string>

  <!-- first app/action bar: menu resources -->
  <string name="action_search">Search</string>
  <string name="action_cut">Cut</string>
  <string name="action_copy">Copy</string>
  <string name="action_paste">Paste</string>

  <string name="action_settings">Settings</string>
  <string name="action_about">About</string>
  <string name="action_help">Help</string>
  <string name="action_logout">Logout</string>

  <string name="action_mail">Mail</string>

  <!-- first app: dialog resources -->
  <string name="ok">OK</string>
  <string name="cancel">Cancel</string>
  <string name="about_dialog_title">About *My First App*</string>
  <string name="about_dialog_message">V1.0\nBuild xxx-xxx-xxx\nJan 2014\n(c) Roland Tritsch</string>

  <!-- action bar: string resources -->
  <string name="action_name">Action Bar</string>

  <!-- lifecycle: string resources -->
  <string name="lifecycle_name">Activity Lifecycle</string>

  <string name="lifecycle_method_list">Lifecycle Method List</string>
  <string name="activity_status">Activity Status</string>
  <string name="dialog_text">Simple Dialog</string>

  <string name="on_create">onCreate</string>
  <string name="on_destroy">onDestroy</string>
  <string name="on_start">onStart</string>
  <string name="on_restart">onRestart</string>
  <string name="on_stop">onStop</string>
  <string name="on_pause">onPause</string>
  <string name="on_resume">onResume</string>

  <string name="activity_a_label">Activity A</string>
  <string name="activity_b_label">Activity B</string>
  <string name="activity_c_label">Activity C</string>

  <string name="btn_start_a_label">Start A</string>
  <string name="btn_start_b_label">Start B</string>
  <string name="btn_start_c_label">Start C</string>
  <string name="btn_start_dialog_label">Dialog</string>

  <string name="btn_finish_a_label">Finish A</string>
  <string name="btn_finish_b_label">Finish B</string>
  <string name="btn_finish_c_label">Finish C</string>
  <string name="btn_finish_dialog_label">Close</string>

  <string name="on_activity_created">onActivityCreated</string>
  <string name="on_attach">onAttach</string>
  <string name="on_create_view">onCreateView</string>
  <string name="on_destroy_view">onDestroyView</string>
  <string name="on_detach">onDetach</string>
  <string name="on_view_created">onViewCreated</string>
  <string name="activity_a">Activity A</string>
  <string name="activity_b">Activity B</string>
  <string name="activity_c">Activity C</string>

  <string name="start_a">Start A</string>
  <string name="start_b">Start B</string>
  <string name="start_c">Start C</string>

  <string name="close">Close</string>
  <string name="dialog">Dialog</string>
</resources>
