<menu xmlns:android="http://schemas.android.com/apk/res/android" >
  <!-- Search and the likeshould appear as action button -->
  <item
      android:id="@+id/action_search"
      android:icon="@drawable/ic_action_search"
      android:title="@string/action_search"
      android:showAsAction="ifRoom"
      />
  <item
      android:id="@+id/action_mail"
      android:icon="@drawable/ic_action_mail"
      android:title="@string/action_mail"
      android:showAsAction="ifRoom"
      />
  <item
      android:id="@+id/action_cut"
      android:icon="@drawable/ic_action_cut"
      android:title="@string/action_cut"
      android:showAsAction="ifRoom"
      />
  <item
      android:id="@+id/action_copy"
      android:icon="@drawable/ic_action_copy"
      android:title="@string/action_copy"
      android:showAsAction="ifRoom"
      />
  <item
      android:id="@+id/action_paste"
      android:icon="@drawable/ic_action_paste"
      android:title="@string/action_paste"
      android:showAsAction="ifRoom"
      />
  <!-- Settings and the like should always be in the overflow -->
  <item
      android:id="@+id/action_settings"
      android:title="@string/action_settings"
      android:showAsAction="never"
      />
  <item
      android:id="@+id/action_help"
      android:title="@string/action_help"
      android:showAsAction="never"
      />
  <item
      android:id="@+id/action_about"
      android:title="@string/action_about"
      android:showAsAction="never"
      />
  />
</menu>
